--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@
   </div>
   <div class="bottom-row">
     Gregory Tereshko - 2016 <span class="cprt">©</span> All rights reserved
+    <!-- Yandex.Metrika informer -->
+    <a href="https://metrika.yandex.ua/stat/?id=35754530&amp;from=informer"
+    target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/35754530/1_0_FFFFFFFF_F2F3F5FF_0_pageviews"
+    style="width:80px; height:15px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры)" onclick="try{Ya.Metrika.informer({i:this,id:35754530,lang:'ru'});return false}catch(e){}" /></a>
+    <!-- /Yandex.Metrika informer -->
   </div>
 </footer>
 
@@ -198,6 +203,35 @@
 <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAKcwS3lZaIbgRKM5_PrDi9lnUzYHE-Aqg&sensor=false&extension=.js'></script>
 <script src="js/custom.js"></script>
 
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter35754530 = new Ya.Metrika({
+                    id:35754530,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true,
+                    ut:"noindex"
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/35754530?ut=noindex" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
 </body>
 </html>
