--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </figure>
       <div class="description description-right">
         <div class="text">
-          <h3>Persinal info</h3>
+          <h3>Personal info</h3>
           <p>
             Vinyl modem sub-orbital bicycle sentient denim sign weathered Chiba skyscraper post. Spook Chiba alcohol long-chain hydrocarbons hotdog carbon Legba advert rain paranoid. Weathered artisanal-ware kanji corporation sentient face forwards tiger-team footage singularity. Receding long-chain hydrocarbons rebar smart-Tokyo denim-ware beef noodles dolphin j-pop render-farm warehouse post-otaku nodal point.
           </p>
@@ -129,7 +129,7 @@
             <img src="images/work3.jpg" alt="Portfolio 3">
           </div>
           <div class="description">
-            <h3>Wunder Woman</h3>
+            <h3>Wonder Woman</h3>
             <p>
               Vehicle rebar corporation sign kanji free-market film chrome render-farm tank-traps sprawl pre-drone dead franchise. Skyscraper disposable fetishism Chiba sprawl receding assassin man tank-traps camera geodesic. Cartel human physical sign systema otaku.
             </p>
